--- a/src/frontend/CalendarComponent.css
+++ b/src/frontend/CalendarComponent.css
@@ -54,7 +54,7 @@
 
 /* Custom styles for the react-calendar component */
 .react-calendar.custom-calendar {
-  width: 50% !important;
+  width: 65% !important;
   border: none !important;
   box-shadow: 0 5px 4px rgba(52, 152, 219, 0.3);
   padding: 3%;
@@ -401,7 +401,7 @@ button.react-calendar__tile--active.selected-date-tile {
   position: absolute;
   top: 20px; /* Centers vertically with the circles */
   /* Adjust left and right to start from the center of first step and end at center of last step */
-  left: calc(20px + 20px); /* 20px padding + half the width of step-number */
+  left: calc(22px + 20px); /* 20px padding + half the width of step-number */
   right: calc(20px + 20px); /* Same for right side */
   height: 4px;
   background-color: #e0e0e0;
@@ -590,7 +590,10 @@ button.react-calendar__tile--active.selected-date-tile {
   background-color: #3498db !important;
   color: white !important;
 }
-
+.react-calendar__tile:disabled.fully-booked-date{
+  background-color: transparent !important;
+  color: red;
+}
 .fully-booked-date {
   background-color: #f5f5f5;
   color: #aaa;
